src/documents/styles/style.css.scss
@import 'normalize';
@import 'flex';
@import "compass/css3/opacity";
@import "compass/css3/transform";

/* fonts */
$basefontsize: 1.6em;
$lightfontcolor: #fffbe0;
$darkfontcolor: #252525;

/* device size cutoffs */
$smalldevice-min: 460px;
$mediumdevice-min: 768px;
$largedevice-min: 1080px;

/* colors */
$backgroundColor: #ebebeb;

/* levels */
$bottom: 10;
$top: 100;
$aboveItAll: 1000;

.lighttext {
	color: $lightfontcolor;
}

.darktext {
	color: $darkfontcolor;
}

.hidden {
	position: absolute !important;
	left: -9999px !important;
}

.flexbox {
	@include flexbox;
}

* {
	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
	box-sizing: border-box;         /* Opera/IE 8+ */
}

html, body {
	width: 100%;
}

html {
	font-size: 62.5%; /* sets root font size to ~10px */
	font-family: 'Ubuntu', sans-serif;
}

@media (min-width: $smalldevice-min) {
	.gap,
	.section-content,
	.project-info {
		font-size: 150%;
	}
}

@media (mind-width: $largedevice-min) {
	.gap,
	.section-content,
	.project-info {
		font-size: 200%;
	}
}


.section-content, 
.project-info {

	h1, h2, h3 {
			@extend .darktext;
			font-size: 1.198em;
			font-weight: 500;
		}

		p {
			@extend .darktext;
			font-size: 0.959em;
			font-weight: 300;
		}

		a {
			@extend .darktext;
			font-weight: 700;
		}

		.line {
			display: inline-block; 
			width: 12.5rem;
			height: 1px; 
			margin: 0 1.5rem;
			background: #000;
		}

		@media (min-width: $smalldevice-min) {

			.column {
				float:left; 
				width: 50%; 
				padding-right: 5%;
				overflow:hidden;
			}

			.line {
				width: 66%;
			}

		}

}


#content {
	width: 100%;
	font-size: $basefontsize;
}

a {
	font-weight: 700;
	color: $darkfontcolor;
	text-decoration: none;
}

.menu {
	position: absolute;
	top: 100vh;
	width: 100%;
	height: 6rem;
	margin: 0;
	background: #ebebeb;
	z-index: $aboveItAll;

	ul {
		@include flexbox;
		@include justify-content(center);
		margin: 0;
		padding: 0;
		list-style: none;
	}

	a {
		display: flex;
		padding: 2rem;
		font-size: 1.8rem;
		font-weight: 300;
	}
}

#menu-toggle {
	display: none;
	position: fixed;
	top: 1em;
	left: 1em;
	z-index: $aboveItAll;

	img {
		position: absolute;
		top: -2px; left: 0;
	}
}

.section {
	width: 100%;
	background: $backgroundColor;
	text-align: center;

	.gap {
		@include flexbox;
		@include align-items(center);
		@include justify-content(center);
		text-align: center;
		overflow:hidden;
	}

	.title {
		margin:0;
		text-transform: uppercase;
		font-size: 3em;
		font-weight: 300;
		color: #fff;
		@include opacity(1);
	}

	.subtitle {
		display: none; /* disabled */
		font-size: 0.959em;
		font-weight: 300;
	}

	.section-content {
		display: inline-block;
		margin: 30px 4.8%;
		background: $backgroundColor;
		text-align: left;
		font-size: 130%;
	}

	@media (min-width: $smalldevice-min) {

		.gap {
			font-size: 130%;
		}

	}

	@media (min-width: $mediumdevice-min) {

		.gap {
			font-size: 170%;
		}

	}

	@media (min-width: $largedevice-min) {

		.gap {
			font-size: 200%;
		}

		.section-content {
			width: 94rem;
			padding: 30px 0;
			margin: 0 auto;
		}
	}

}

	.section#intro {
		height: 100vh;
		text-align: center;
		margin-bottom: 6rem;

		.branding {
			width: 100%;
			height: 100%;
			background: center/cover url('/images/logo_fallback.jpg') no-repeat;
			overflow: hidden;

			.logo-video {
				display: none;
				width: auto;
				height: 102%;
				pointer-events: none;
			}

		}

		@media (min-width: $smalldevice-min) {

			.branding {
				background: #000;

				.logo-video {
					display: initial;
				}
			}

		}

		.invitation {
			position: absolute;
			bottom: 5rem;
			left: 50%;
			width: 3rem;
			height: 3rem;
			margin-left: -1.5rem;

			-webkit-transition: opacity 0.8s ease;
        	-moz-transition: opacity 0.8s ease;
            -o-transition: opacity 0.8s ease;
            transition: opacity 0.8s ease;

			img {
				width: 100%;
			}

		}

		@media (min-width: $smalldevice-min) {

			.invitation {
				opacity: 0;
			}

		}

	}

	.section.work {
		 background: $backgroundColor;

		.section-content {
			padding: 0;
			margin: 0;
		}

		.tile {
			display: block;
			overflow: hidden;

			img {
				width: 100%;
			}

			&:hover {
				@include opacity(0.7);
			}
		}

		.row {
			@include flexbox;
			@include flex-direction(column);
			@include align-items(stretch);
			height: 150vw;

			> .tile {
				@include flex(2);
			}

			> .stack {
				@include flex(1);
			}
		}

		.stack {
			@include flexbox;
			@include flex-direction(row);
		}

		@media (min-width: $smalldevice-min) {

			.row {
				@include flex-direction(row);
				height: 66vw;
			}

			.stack {
				@include flex-direction(column);

				.tile {
					height: auto;
				}
			}

		}

		@media (min-width: $largedevice-min) {

			.section-content {
				padding: 6rem 0;
			}

			.row {
				height: 2/3 * 94rem;
			}

		}

	}

	.no-flexbox .section.work {

		.row {
			display:block;
			width: 100%;
			overflow:hidden;

			> .tile {
				width: 100%;
			}

			> .stack {
				width: 100%;
				overflow: hidden;

				.tile {
					width: 50%;
				}
			}
		}

	}

.footer {
	height: 6rem;

	.impressum {
		float: right;
		height: 100%;
		padding: 1.1em;
		font-size: 1.2em;
		font-weight: 300;
	}
}

/* Project Pages */

.project {
	width: 100%;

	#content {
		width: 100%;
		background: $backgroundColor;
	}

	.menu {
		position: fixed;
		top: 0;
	}

	.project-images {
		width: 100%;
		background: #fff;
		margin-top: 6rem;
		overflow: hidden;

		.slider-wrap {
			@include flexbox;
			@include align-items(center);
			@include justify-content(center);
			width: 100%;
			padding: 1.5rem 0;
			text-align: center;

			img {
				max-width: 60%;
				max-height: 65%;
			}

			iframe {
				width: 80%;
				height: 60%;
			}
		}

	}

	.project-info {
		padding: 3rem 2rem;
		background: $backgroundColor;
	}

	.footer {
		min-height: 15rem;
		background: $backgroundColor;
		padding: 0 2rem;

		.back-arrow {
			display:inline-block;
			@include rotate(180deg);
			font-size: 3rem;
		}

		.back-arrow-label {
			vertical-align: super;
			padding: 0 1rem;
			font-size: 1.4rem;
		}

	}

	@media(min-width: $largedevice-min) {

		.project-info, 
		.footer {
			width: 94rem;
			margin: 0 auto;
		}

		.footer {
			margin-top: 2rem;
		}

	}

}

